--- a/css/styles.css
+++ b/css/styles.css
@@ -67,13 +67,13 @@ ul {
   padding-left: 16px;
   padding-right: 16px;
   /* padding-top: 24px; */
-  background-color: rgb(191, 157, 249);
+/*   background-color: rgb(191, 157, 249); */
 }
 
 @media screen and (min-width: 428px) and (max-width: 767px) {
   .container {
     width: 428px;
-    background-color: rgb(235, 167, 247);
+/*     background-color: rgb(235, 167, 247); */
     margin-left: auto;
     margin-right: auto;
   }
@@ -336,7 +336,7 @@ body {
 @media screen and (min-width: 768px) {
   .container {
     width: 768px;
-    background-color: rgb(251, 63, 63);
+ /*    background-color: rgb(251, 63, 63); */
     margin-left: auto;
     margin-right: auto;
   }
@@ -436,7 +436,7 @@ body {
 @media screen and (min-width: 1158px) {
   .container {
     width: 1158px;
-    background-color: rgb(249, 159, 159);
+/*     background-color: rgb(249, 159, 159); */
     margin-left: auto;
     margin-right: auto;
   }
